--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -13,3 +13,10 @@ services {
     port = 80
   }
 }
+
+cassandra {
+  host     : ["localhost"]
+  keyspace : "Products"
+  username : "master"
+  password : "master"
+}
