rename to catalog keyspace, cassandra's column families should be better designed

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -16,7 +16,7 @@ services {
 
 cassandra {
   host     : ["localhost"]
-  keyspace : "Products"
+  keyspace : "Catalog"
   username : "master"
   password : "master"
 }
